--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-django==3.2.8
-pandas==1.3.3
-numpy==1.21.2
-matplotlib==3.4.3
+django_countries==7.5.1
+matplotlib==3.8.1
+matplotlib==3.8.2
+pandas==2.0.3
+django==3.2.23
