--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,78 @@
+# .gitignore for Django
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
-*$py.class
+*.pyc
+*.pyo
+*.pyd
 
 # Local development settings
-local_settings.py
+.env
 
-# Database files
+# Database
+*.sqlite3
 db.sqlite3
+
+# Media files
+media/
+
+# Static files
+staticfiles/
+
+# Secret key
+*.secret
 
 # Log files
 *.log
 
-# Static files
-/static/
+# Uncomment if using Jupyter Notebooks
+# .ipynb_checkpoints/
 
-# Media files
-/media/
+# Uncomment if using Poetry for dependency management
+# poetry.lock
 
-# Environment variables
-.env
+# Uncomment if using pipenv for dependency management
+# Pipfile
+# Pipfile.lock
+
+# IDE-specific files/directories
+.idea/
+.vscode/
 
 # Compiled Python files
 *.pyc
 
-# macOS
-.DS_Store
+# Compiled C extensions
+*.so
 
-# Windows
-Thumbs.db
+# Compiled bytecode
+*.pyo
+*.pyd
 
-# Python virtual environment
+# Django development server pid
+*.pid
+
+# Ignore coverage reports
+htmlcov/
+
+# Ignore test database
+db.sqlite3
+
+# Output of 'python manage.py test'
+test-reports/
+
+# Translations
+*.mo
+
+# Python egg metadata
+*.egg-info/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Environment variables file
+.env
+
 env/
+venv/
